icons and more added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<nav class="navbar navbar-expand-lg site-navbar navbar-light bg-light" id="pb-navbar">
 
-		<div class="container">
+		<div class="container" style="margin-top: 0px;">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -47,7 +47,7 @@
 			<div class="row intro-text align-items-center justify-content-center">
 				<div class="col-md-10 text-center pt-5">
 
-					<h1 class="site-heading site-animate">Hello, I'm <strong class="d-block">ARNAV MAHAJAN</strong></h1>
+					<h1 class="site-heading site-animate">Hello, I'm <strong class="d-block">Arnav Mahajan</strong></h1>
 					<strong class="d-block text-white text-uppercase letter-spacing">and this is My Portfolio</strong>
 
 				</div>
@@ -59,7 +59,7 @@
 
 
 
-
+<!--
 	<section class="site-section" id="section-portfolio">
 		<div class="container">
 			<div class="row">
@@ -187,6 +187,7 @@
 		</div>
 	</section>
 	<!-- .section -->
+-->
 
 	
 	<section class="site-section " id="section-resume">
@@ -194,7 +195,7 @@
 			<div class="row">
 				<div class="col-md-12 mb-5">
 					<div class="section-heading text-center">
-						<h2>My <strong>Resume</strong></h2>
+						<h2>My <strong>Education | Experience</strong></h2>
 					</div>
 				</div>
 				<div class="col-md-6">
@@ -204,21 +205,21 @@
 						<h3>B.Tech</h3>
 						<h3>Computer Science and Engineering</h3>
 						<p>Current CPI : 9.1</p>
-						<span class="school">Indian Institute of Information Technology, Jabalpur</span>
+						<span class="school"><h3 style="color: azure;"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Indian Institute of Information Technology, Jabalpur</h3></span>
 					</div>
 
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span>2018 - 2019</span>
 						<h3>Class 12</h3>
 						<p>Percetage : 95.2%</p>
-						<span class="school">Heritage School Jammu</span>
+						<span class="school"><h3 style="color: azure;"><i class="fa fa-school" aria-hidden="true"></i> Heritage School Jammu</h3></span>
 					</div>
 
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span>2018 - 2019</span>
 						<h3>Class 10</h3>
 						<p>CGPA: 10</p>
-						<span class="school">Heritage School Jammu</span>
+						<span class="school"><h3 style="color: azure;"><i class="fa fa-school" aria-hidden="true"></i> Heritage School Jammu</h3></span>
 					</div>
 
 				</div>
@@ -231,7 +232,7 @@
 						<span class="date"><span class="icon-calendar"></span> April 2021 - July 2021</span>
 						<h3>Java Software Engineer Intern</h3>
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-						<span class="school"><h2>Anikini Technologies Pvt Ltd</h2></span>
+						<span class="school"><h3 style="color: azure;">Anikini Technologies Pvt Ltd</h3></span>
 					</div>
 
 
@@ -240,30 +241,9 @@
 		</div>
 	</section> <!-- .section -->
 
-	<section class="site-section" id="section-about">
-		<div class="container">
-			<div class="row mb-5 align-items-center">
-				<div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0">
-					<img src="images/mee4.jpg" alt="Image placeholder" class="img-fluid">
-				</div>
-				<div class="col-lg-5 pl-lg-5">
-					<div class="section-heading">
-						<h2>About <strong>Me</strong></h2>
-					</div>
-					<p class="lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-					<p class="mb-5  ">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-
-					<p>
-						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
-						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
-					</p>
-				</div>
-			</div>
 
 
-		</div>
-	</section>
-
+	<!--
 	<section class="site-section">
 		<div class="container">
 			<div class="row mb-5">
@@ -331,7 +311,7 @@
 			</div>
 		</div>
 	</section>
-
+-->
 
 	<section class="site-section pb-0"  id="section-services">
 		<div class="container">
@@ -347,90 +327,105 @@
 
 				<div class="col-md-6 col-lg-4 text-center mb-5">
 					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-						<span class="icon">
-							<span class="icon-browser2"></span>
+						<span>
+							<i class="mb-3 fa-5x fab fa-java"></i>
 						</span>
 						<h3 class="mb-4">Java</h3>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
 					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-						<span class="icon">
-							<span class="icon-presentation"></span>
+						<span >
+							<!--<i class="mb-3 fa-5x fab fa-java"></i>-->
+							<img src="images/springboot.png" class="mb-3" style="height:80px;">
 						</span>
 						<h3 class="mb-4">Spring Boot | Maven | Hibernate</h3>
 						</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
 					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-						<span class="icon">
-							<span class="icon-presentation"></span>
+						<span>
+							<i class="fas fa-database fa-5x mb-3"></i>
 						</span>
 						<h3 class="mb-4">MongoDB | MySQL</h3>
 						</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
 					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-						<span class="icon">
-							<span class="icon-presentation"></span>
+						<span>
+							<i class="fa-5x fab fa-android"></i>
 						</span>
 						<h3 class="mb-4">Android</h3>
 						</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
 					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-						<span class="icon">
-							<span class="icon-presentation"></span>
+						<span>
+							<img src="images/rest.png" class="mb-3" style="height:65px;">
 						</span>
 						<h3 class="mb-4">REST | JSON</h3>
 						</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
 					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-						<span class="icon">
-							<span class="icon-presentation"></span>
+						<span >
+							<i class="fa-5x fab fa-html5 mr-3"></i>
+							<i class="fa-5x fab fa-css3-alt mr-2"></i>
+							<i class="fa-5x fab fa-bootstrap"></i>
 						</span>
 						<h3 class="mb-4">HTML | CSS | Bootstrap</h3>
 						</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
 					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-						<span class="icon">
-							<span class="icon-presentation"></span>
+						<span >
+							<img src="images/sb.png" class="mb-3" style="height:65px;">
 						</span>
 						<h3 class="mb-4">Swagger</h3>
 						</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
 					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-						<span class="icon">
-							<span class="icon-presentation"></span>
+						<span >
+							<i class="fa-5x fab fa-react mr-3"></i>
+							<i class="fa-5x fab fa-node mr-2"></i>
 						</span>
 						<h3 class="mb-4">React | Node</h3>
 						</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
 					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-						<span class="icon">
-							<span class="icon-presentation"></span>
+						<span >
+							<i class="fa-5x fab fa-unity mr-2"></i>
 						</span>
 						<h3 class="mb-4">C# | Unity</h3>
 						</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
 					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-						<span class="icon">
-							<span class="icon-presentation"></span>
+						<span >
+							<i class="fa-5x fab fa-git mr-3"></i>
+							<i class="fa-5x fab fa-github mr-2"></i>
+							<i class="fa-5x fab fa-bitbucket"></i>
 						</span>
 						<h3 class="mb-4">Git | Github | Bitbucket</h3>
 						</div>
 				</div>
 				<div class="col-md-6 col-lg-4 text-center mb-5">
 					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-						<span class="icon">
-							<span class="icon-presentation"></span>
+						<span >
+							<!--<i class="fa-5x fab fa-cuttlefish mr-3"></i>-->
+							<i class="fa-5x fab fa-python mr-2"></i>
 						</span>
 						<h3 class="mb-4">C++ | Python</h3>
+						</div>
+				</div>
+				<div class="col-md-6 col-lg-4 text-center mb-5">
+					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
+						<span >
+							<i class="fa-5x fab fa-js-square mr-2"></i>
+						</span>
+						<h3 class="mb-4">JavaScript</h3>
 						</div>
 				</div>
 			</div>
@@ -445,7 +440,7 @@
 			<div class="row">
 				<div class="col-md-12 mb-5">
 					<div class="section-heading text-center">
-						<h2>Featured <strong>Projects</strong></h2>
+						<h2>Featured <strong>Portfolio</strong></h2>
 					</div>
 				</div>
 			</div>
@@ -456,11 +451,14 @@
 						<a href="#"><img src="images/blotech.jpg" alt="Image placeholder" class="img-fluid"></a>
 						<div class="blog-entry-text">
 							<h3><a href="#">BloTech</a></h3>
-							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+							<p class="mb-4">A web application for posting and viewing blogs by others on different technical topics.
+								Users can also add images and code with their post. Integrated Facebook Comment Plugin to allow users to easily
+								comment on different posts.
+							</p>
 
 							<div class="meta">
 								<span></span>Java | Servlets | JSPs | BootStrap | MySQL 
-								<a href="https://github.com/arrnavvv/Endless-Runner" target="_blank" style="margin-left: 0px; "><span class="icon"></span> Github</p></a>
+								<a href="https://github.com/arrnavvv/Endless-Runner" target="_blank" style="margin-left: 100px; "><i class="icon fa fa-github" aria-hidden="true"></i> Github</p></a>
 							</div>
 						</div>
 					</div>
@@ -471,12 +469,14 @@
 						<a href="#"><img src="images/admm.jpg" alt="Image placeholder" class="img-fluid"></a>
 						<div class="blog-entry-text">
 							<h3><a href="#">The Adventures Of Moon-Man</a></h3>
-							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+							<p class="mb-4">Krakens have taken over the whole Solar System. Play as Moon-Man liberating every planet one by one to overthrow the evil intergalactic species.
+								A submission for the Github Global Game Jam 2020.
+							</p>
 
 							<div class="meta">
 								<span></span>C# | Unity | Itch.io
-								<a href="https://github.com/arrnavvv/Endless-Runner" target="_blank" style="margin-left: 70px; "><span class="icon"></span> Github</p></a>
-								<a href="https://arrnavvv.itch.io/the-adventures-of-moon-man" target="_blank"><span class="icon-calendar"></span> Play</p></a>
+								<a href="https://github.com/arrnavvv/Endless-Runner" target="_blank" style="margin-left: 60px; "><i class="icon fa fa-github" aria-hidden="true"></i> Github</p></a>
+								<a href="https://arrnavvv.itch.io/the-adventures-of-moon-man" target="_blank"><i class="icon fa fa-play" aria-hidden="true"></i> Play</p></a>
 							</div>
 						</div>
 					</div>
@@ -486,12 +486,14 @@
 					<div class="blog-entry">
 						<a href="#"><img src="images/post_3.jpg" alt="Image placeholder" class="img-fluid"></a>
 						<div class="blog-entry-text">
-							<h3><a href="#">Flipkart Grid</a></h3>
-							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+							<h3><a href="#">COMBOT: The Voice Bot</a></h3>
+							<p class="mb-4">Voice bot made for the Flipkart Grid 2021 Challenge. Combot can perform various functions through voice such 
+								taking an order, feedback and customer issues, modify your cart and search items, all this using your Voice!
+							</p>
 
 							<div class="meta">
-								<a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
-								<a href="#"><span class="icon-bubble"></span> 5 Comments</a>
+								<span></span>React | Python | 
+								<a href="https://github.com/arrnavvv/Endless-Runner" target="_blank" style="margin-left: 120px; "><i class="icon fa fa-github" aria-hidden="true"></i> Github</p></a>
 							</div>
 						</div>
 					</div>
@@ -502,11 +504,14 @@
 						<a href="#"><img src="images/post_3.jpg" alt="Image placeholder" class="img-fluid"></a>
 						<div class="blog-entry-text">
 							<h3><a href="#">Depression Detection</a></h3>
-							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+							<p class="mb-4">Depression has become a major mental health issue faced by humans worldwide.We 
+								developed a model for automated speech-based screening of depression using deep convolutional neural networks, working on
+								the DAIC-WOZ dataset.
+							</p>
 
 							<div class="meta">
-								<a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
-								<a href="#"><span class="icon-bubble"></span> 5 Comments</a>
+								<span></span>React | Python | 
+								<a href="https://github.com/arrnavvv/Endless-Runner" target="_blank" style="margin-left: 120px; "><i class="icon fa fa-github" aria-hidden="true"></i> Github</p></a>
 							</div>
 						</div>
 					</div>
@@ -521,8 +526,8 @@
 								Made with love for games that push you to outdo your last run.</p>
 
 							<div class="meta">
-								<span></span>C# | Unity <br>
-								<h3><a href="https://github.com/arrnavvv/Endless-Runner" target="_blank"><span class="icon"></span> Github</p></a></h3>
+								<span></span>C# | Unity | WebGL
+								<a href="https://github.com/arrnavvv/Endless-Runner" target="_blank"  style="margin-left: 100px;"><i class="icon fa fa-github" aria-hidden="true"></i> Github</p></a>
 							</div>
 						</div>
 					</div>
@@ -533,8 +538,8 @@
 						<a href="#"><img src="images/em (1).jpg" alt="Image placeholder" class="img-fluid"></a>
 						<div class="blog-entry-text">
 							<h3><a href="#">Eminem Offline Lyrics</a></h3>
-							<p class="mb-4">A solution that addresses the needs for getting lyrics to all the songs ever released by Eminem for a quick look or in case of not connectivity to internet.</p>
-
+							<p class="mb-4">A solution that addresses the needs for getting lyrics to all the songs ever 
+								released by Eminem offline on your phone to enable music lovers to get quick access to the lyrics.</p>
 							<div class="meta">
 								<span></span>Android | Java
 							</div>
@@ -546,40 +551,73 @@
 		</div>
 	</section>
 
+	<section class="site-section" id="section-about">
+		<div class="container">
+			<div class="row mb-5 align-items-center">
+				<div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0">
+					<img src="images/mee4.jpg" alt="Image placeholder" class="img-fluid">
+				</div>
+				<div class="col-lg-5 pl-lg-5">
+					<div class="section-heading">
+						<h2>About <strong>Me</strong></h2>
+					</div>
+					<p class="lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+					<p class="mb-5  ">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+
+					<p>
+						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
+						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
+					</p>
+				</div>
+			</div>
+
+
+		</div>
+	</section>
+
 	<section class="site-section" id="section-contact">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12 mb-5">
+				<div class="col-md-12 mb-1">
 					<div class="section-heading text-center">
 						<h2>Get <strong>In Touch</strong></h2>
 					</div>
 				</div>
 
-				<div class="col-md-5 pl-md-5">
-					<h3 class="mb-5">My Contact Details</h3>
-					<ul class="site-contact-details">
+				<div class="col-md-12 mb-4">
+					<ul class="site-contact-details text-center">
 						<li>
-							<span class="text-uppercase">Email</span>
-							cptarnav@gmail.com
+							<p style="font-size: 25px;">
+							I prefer being addressed as Arnav. Currently, I am open to work.<br>
+							I can listen, share, observe understand.<br>
+							You can reach out for anything, no worries.<br>
+							Apart from all that, my inbox is also open to share your thoughts, doubts, maybe some memes,
+							a game of Rocket League? or simply a "Hello"!<br>
+							
+							You can contact me using any of my contact details given.
+						</p>
 						</li>
 						<li>
-							<span class="text-uppercase">Address</span>
-							San Francisco, CA <br>
-							4th Floor8 Lower  <br>
-							San Francisco street, M1 50F
+							<span class="text-uppercase" style="color: aqua;">Email</span>
+							<i class="fa fa-envelope" aria-hidden="true"></i> cptarnav@gmail.com
+						</li>
+						<li>
+							<span class="text-uppercase" style="color: aqua;">Address</span>
+							<i class="fa fa-map-marker" aria-hidden="true"></i> Jammu, India
 						</li>
 					</ul>
 				</div>
 			</div>
 		</div>
 		
-		<div class="row mb-5">
-			<div class="col-md-12 text-center">
+		<div class="row mb-2">
+			<div class="col-md-12 text-center ">
 				<p>
-					<a href="#" class="social-item"><span class="icon-facebook2 col-lg-7"></span></a>
-					<a href="#" class="social-item"><span class="icon-twitter col-lg-7"></span></a>
-					<a href="#" class="social-item"><span class="icon-instagram2 col-lg-7"></span></a>
-					<a href="https://www.linkedin.com/in/arrnavvv/" class="social-item"><span class="icon-linkedin2 col-lg-7"></span></a>
+					<a href="https://github.com/arrnavvv" class="social-item" target="_blank"><i class="icon mr-3 fa fa-github" aria-hidden="true"style="font-size: 35px;"></i></a>
+					<a href="https://www.linkedin.com/in/arrnavvv/" class="social-item" target="_blank"><i class="icon mr-3 fa fa-linkedin" style="font-size: 35px;"></i></a>
+					<a href="https://www.instagram.com/arrnavvv/" class="social-item" target="_blank"><i class="icon mr-3 fa fa-instagram" aria-hidden="true" style="font-size: 35px;"></i></a>
+					<a href="mailto:cptarnav@gmail.com" class="social-item" target="_blank"><i class="icon mr-3 fa fa-envelope" aria-hidden="true" style="font-size: 35px;"></i></a>
+					<a href="https://www.facebook.com/arnav.mahajan.501/" class="social-item" target="_blank"><i class="icon mr-3 fa fa-facebook" aria-hidden="true" style="font-size: 35px;"></i></a>
 				</p>
 			</div>
 		</div>
@@ -590,7 +628,7 @@
 	<footer class="site-footer">
 		<div class="container">
 
-			<div class="row mb-5">
+			<div class="row mb-3">
 				<p class="col-12 text-center">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved |<a href="https://colorlib.com" target="_blank" class="text-white"> Colorlib</a>
@@ -603,8 +641,8 @@
 	</footer>
 
 
-
-
+	<script src="https://kit.fontawesome.com/788cf46301.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="js/vendor/jquery.min.js"></script>
 	<script src="js/vendor/jquery-migrate-3.0.1.min.js"></script>
 	<script src="js/vendor/popper.min.js"></script>
