--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 			<div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample09">
 				<ul class="navbar-nav">
 					<li class="nav-item"><a class="nav-link" href="#section-home">Home</a></li>
-					<li class="nav-item"><a class="nav-link" href="#section-portfolio">Portfolio</a></li>
-					<li class="nav-item"><a class="nav-link" href="#section-resume">Resume</a></li>
+					<li class="nav-item"><a class="nav-link" href="#section-blog">Portfolio</a></li>
+					<!--<li class="nav-item"><a class="nav-link" href="#section-resume">Resume</a></li> -->
 					<li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
 				</ul>
@@ -210,14 +210,14 @@
 
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span>2018 - 2019</span>
-						<h3>Class 12</h3>
+						<h3>Class 12 (Intermediate)</h3>
 						<p>Percetage : 95.2%</p>
 						<span class="school"><h3 style="color: azure;"><i class="fa fa-school" aria-hidden="true"></i> Heritage School Jammu</h3></span>
 					</div>
 
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span>2018 - 2019</span>
-						<h3>Class 10</h3>
+						<h3>Class 10 (High School)</h3>
 						<p>CGPA: 10</p>
 						<span class="school"><h3 style="color: azure;"><i class="fa fa-school" aria-hidden="true"></i> Heritage School Jammu</h3></span>
 					</div>
@@ -448,9 +448,9 @@
 			<div class="row">
 				<div class="col-sm-6 col-lg-4 mb-4">
 					<div class="blog-entry">
-						<a href="#"><img src="images/blotech.jpg" alt="Image placeholder" class="img-fluid"></a>
+						<a href="https://github.com/arrnavvv/Blotech" target="_blank"><img src="images/blotech.jpg" alt="Image placeholder" class="img-fluid"></a>
 						<div class="blog-entry-text">
-							<h3><a href="#">BloTech</a></h3>
+							<h3><a href="https://github.com/arrnavvv/Blotech" target="_blank">BloTech</a></h3>
 							<p class="mb-4">A web application for posting and viewing blogs by others on different technical topics.
 								Users can also add images and code with their post. Integrated Facebook Comment Plugin to allow users to easily
 								comment on different posts.
@@ -458,7 +458,7 @@
 
 							<div class="meta">
 								<span></span>Java | Servlets | JSPs | BootStrap | MySQL 
-								<a href="https://github.com/arrnavvv/Endless-Runner" target="_blank" style="margin-left: 100px; "><i class="icon fa fa-github" aria-hidden="true"></i> Github</p></a>
+								<a href="https://github.com/arrnavvv/Blotech" target="_blank" style="margin-left: 100px; "><i class="icon fa fa-github" aria-hidden="true"></i> Github</p></a>
 							</div>
 						</div>
 					</div>
@@ -466,16 +466,16 @@
 
 				<div class="col-sm-6 col-lg-4 mb-4">
 					<div class="blog-entry">
-						<a href="#"><img src="images/admm.jpg" alt="Image placeholder" class="img-fluid"></a>
+						<a href="https://github.com/arrnavvv/Global-Game-Jam-2020-Adventures-of-Moon-man-" target="_blank"><img src="images/admm.jpg" alt="Image placeholder" class="img-fluid"></a>
 						<div class="blog-entry-text">
-							<h3><a href="#">The Adventures Of Moon-Man</a></h3>
+							<h3><a href="https://github.com/arrnavvv/Global-Game-Jam-2020-Adventures-of-Moon-man-" target="_blank">The Adventures Of Moon-Man</a></h3>
 							<p class="mb-4">Krakens have taken over the whole Solar System. Play as Moon-Man liberating every planet one by one to overthrow the evil intergalactic species.
 								A submission for the Github Global Game Jam 2020.
 							</p>
 
 							<div class="meta">
 								<span></span>C# | Unity | Itch.io
-								<a href="https://github.com/arrnavvv/Endless-Runner" target="_blank" style="margin-left: 60px; "><i class="icon fa fa-github" aria-hidden="true"></i> Github</p></a>
+								<a href="https://github.com/arrnavvv/Global-Game-Jam-2020-Adventures-of-Moon-man-" target="_blank" style="margin-left: 60px; "><i class="icon fa fa-github" aria-hidden="true"></i> Github</p></a>
 								<a href="https://arrnavvv.itch.io/the-adventures-of-moon-man" target="_blank"><i class="icon fa fa-play" aria-hidden="true"></i> Play</p></a>
 							</div>
 						</div>
@@ -484,16 +484,16 @@
 
 				<div class="col-sm-6 col-lg-4 mb-4">
 					<div class="blog-entry">
-						<a href="#"><img src="images/post_3.jpg" alt="Image placeholder" class="img-fluid"></a>
+						<a href="https://github.com/arrnavvv/G_Project/tree/master" target="_blank"><img src="images/post_3.jpg" alt="Image placeholder" class="img-fluid"></a>
 						<div class="blog-entry-text">
-							<h3><a href="#">COMBOT: The Voice Bot</a></h3>
+							<h3><a href="https://github.com/arrnavvv/G_Project/tree/master" target="_blank">COMBOT: The Voice Bot</a></h3>
 							<p class="mb-4">Voice bot made for the Flipkart Grid 2021 Challenge. Combot can perform various functions through voice such 
 								taking an order, feedback and customer issues, modify your cart and search items, all this using your Voice!
 							</p>
 
 							<div class="meta">
 								<span></span>React | Python | 
-								<a href="https://github.com/arrnavvv/Endless-Runner" target="_blank" style="margin-left: 120px; "><i class="icon fa fa-github" aria-hidden="true"></i> Github</p></a>
+								<a href="https://github.com/arrnavvv/G_Project/tree/master" target="_blank" style="margin-left: 120px; "><i class="icon fa fa-github" aria-hidden="true"></i> Github</p></a>
 							</div>
 						</div>
 					</div>
@@ -501,9 +501,9 @@
 
 				<div class="col-sm-6 col-lg-4 mb-4">
 					<div class="blog-entry">
-						<a href="#"><img src="images/post_3.jpg" alt="Image placeholder" class="img-fluid"></a>
+						<a href="https://github.com/arrnavvv/DepressionDetection" target="_blank"><img src="images/post_3.jpg" alt="Image placeholder" class="img-fluid"></a>
 						<div class="blog-entry-text">
-							<h3><a href="#">Depression Detection</a></h3>
+							<h3><a href="https://github.com/arrnavvv/DepressionDetection" target="_blank">Depression Detection</a></h3>
 							<p class="mb-4">Depression has become a major mental health issue faced by humans worldwide.We 
 								developed a model for automated speech-based screening of depression using deep convolutional neural networks, working on
 								the DAIC-WOZ dataset.
@@ -511,7 +511,7 @@
 
 							<div class="meta">
 								<span></span>React | Python | 
-								<a href="https://github.com/arrnavvv/Endless-Runner" target="_blank" style="margin-left: 120px; "><i class="icon fa fa-github" aria-hidden="true"></i> Github</p></a>
+								<a href="https://github.com/arrnavvv/DepressionDetection" target="_blank" style="margin-left: 120px; "><i class="icon fa fa-github" aria-hidden="true"></i> Github</p></a>
 							</div>
 						</div>
 					</div>
@@ -535,9 +535,9 @@
 
 				<div class="col-sm-6 col-lg-4 mb-4">
 					<div class="blog-entry">
-						<a href="#"><img src="images/em (1).jpg" alt="Image placeholder" class="img-fluid"></a>
+						<img src="images/em (1).jpg" alt="Image placeholder" class="img-fluid">
 						<div class="blog-entry-text">
-							<h3><a href="#">Eminem Offline Lyrics</a></h3>
+							<h3>Eminem Offline Lyrics</h3>
 							<p class="mb-4">A solution that addresses the needs for getting lyrics to all the songs ever 
 								released by Eminem offline on your phone to enable music lovers to get quick access to the lyrics.</p>
 							<div class="meta">
@@ -561,12 +561,20 @@
 					<div class="section-heading">
 						<h2>About <strong>Me</strong></h2>
 					</div>
-					<p class="lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-					<p class="mb-5  ">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+					<p class="lead">Hey!!</p>
+					<p class="lead">I'm a prefinal year undergrad doing my major in Computer Science from IIITDM Jabalpur. I love problem solving and building new stuff. I'm
+						always ready to take on new challenges and hone my Skills.
+					</p>
+					<p class="mb-5  ">Though the pandemic has affected all of us, it also has given us the oppurtunity to focus on ourselves, find what we love,
+						acknowledge the people who were there for us, improve our skills and giving the required attention to our health and much more. I have and always will do
+						my best to be a better person today than I was yesterday. Compared to the Arnav before the pandemic, I'm happy with who I am today, a mentally and physically stronger 
+						Arnav who can fight through stressful times with patience and strenth. 
+						Hoping for more positive things to come!!
+					</p>
 
 					<p>
-						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
-						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
+						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Contact Me</a>
+						<a href="https://drive.google.com/file/d/1becgkfhbn8oh78VqKgaz3wlUFJS8XKeN/view?usp=sharing" target="_blank" class="btn btn-secondary px-4 py-2 btn-sm">Resume</a>
 					</p>
 				</div>
 			</div>
