changed depression and combot pictures

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
 
 				<div class="col-sm-6 col-lg-4 mb-4">
 					<div class="blog-entry">
-						<a href="https://github.com/arrnavvv/G_Project/tree/master" target="_blank"><img src="images/post_3.jpg" alt="Image placeholder" class="img-fluid"></a>
+						<a href="https://github.com/arrnavvv/G_Project/tree/master" target="_blank"><img src="images/bot2.jpg" alt="Image placeholder" class="img-fluid"></a>
 						<div class="blog-entry-text">
 							<h3><a href="https://github.com/arrnavvv/G_Project/tree/master" target="_blank">COMBOT: The Voice Bot</a></h3>
 							<p class="mb-4">Voice bot made for the Flipkart Grid 2021 Challenge. Combot can perform various functions through voice such 
@@ -501,7 +501,7 @@
 
 				<div class="col-sm-6 col-lg-4 mb-4">
 					<div class="blog-entry">
-						<a href="https://github.com/arrnavvv/DepressionDetection" target="_blank"><img src="images/post_3.jpg" alt="Image placeholder" class="img-fluid"></a>
+						<a href="https://github.com/arrnavvv/DepressionDetection" target="_blank"><img src="images/depw.jpg" alt="Image placeholder" class="img-fluid"></a>
 						<div class="blog-entry-text">
 							<h3><a href="https://github.com/arrnavvv/DepressionDetection" target="_blank">Depression Detection</a></h3>
 							<p class="mb-4">Depression has become a major mental health issue faced by humans worldwide.We 
