Added info on internship

--- a/index.html
+++ b/index.html
@@ -222,7 +222,11 @@
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> April 2021 - July 2021</span>
 						<h3>Java Software Engineer Intern</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+						<p>
+						I developed and worked on various web applications working mostly with spring boot. I worked with the frontend team on a business accounting software exposing APIs and handling the backend database all from scratch. <br>
+						I also integrated several payment gateways into both existing and new web applications.
+						As an intern, I got an experience and insight into the Corporate industry and the fast-pace growth and innovation that drives it.
+					 </p>
 						<span class="school"><h3 style="color: azure;">Anikini Technologies Pvt Ltd</h3></span>
 					</div>
 
@@ -486,7 +490,7 @@
 
 				<div class="col-sm-6 col-lg-4 mb-4">
 					<div class="blog-entry">
-						<a href="https://github.com/arrnavvv/DepressionDetection" target="_blank"><img src="images/depw.jpg" alt="Image placeholder" class="img-fluid"></a>
+						<a href="https://github.com/arrnavvv/DepressionDetection" target="_blank"><img src="images/dep2.jpg" alt="Image placeholder" class="img-fluid"></a>
 						<div class="blog-entry-text">
 							<h3><a href="https://github.com/arrnavvv/DepressionDetection" target="_blank">Depression Detection</a></h3>
 							<p class="mb-4">Depression has become a major mental health issue faced by humans worldwide.We 
@@ -553,7 +557,7 @@
 					<p class="mb-5  ">Though the pandemic has affected all of us, it also has given us the oppurtunity to focus on ourselves, find what we love,
 						acknowledge the people who were there for us, improve our skills and giving the required attention to our health and much more. I have and always will do
 						my best to be a better person today than I was yesterday. Compared to the Arnav before the pandemic, I'm happy with who I am today, a mentally and physically stronger 
-						Arnav who can fight through stressful times with patience and strenth. 
+						Arnav who can fight through stressful times with patience and strength. 
 						Hoping for more positive things to come!!
 					</p>
 
